--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 ui = [
   "fastapi[standard]"
 ]
+test = [
+    "pytest"
+]
 
 [project.scripts]
 package-skill = "skill_framework.package:package_skill"
