--- a/layout-previewer/package.json
+++ b/layout-previewer/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@answerrocket/dynamic-layout": "git+https://bitbucket.org/aglabs/dynamic-layout.git#main",
+    "@answerrocket/dynamic-layout": "bitbucket:aglabs/dynamic-layout#main",
     "cra-template": "1.2.0",
     "react": "18",
     "react-dom": "18",
